finalises up to evaluation of performance before sending it off to Marc

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -221,6 +221,7 @@ https://www.lesswrong.com/posts/hamma4XgeNrsvAJv5/prisoner-s-dilemma-tournament-
 }
 @misc{prison,
   title = {LIFL (1998) PRISON},
+  author = {},
   howpublished = {\url{http://www.lifl.fr/IPD/ipd.frame.html}},
   note = {Accessed: 2017-10-23}
 }
