--- a/paper/regression_table.tex
+++ b/paper/regression_table.tex
@@ -9,14 +9,14 @@
 $CC$ to $C$ rate       & -0.050 &  0.000 & -0.073 &  0.000 &  0.009 &  0.000 &  0.009 &    0.0 \\
 $CD$ to $C$ rate       &  0.298 &  0.000 & -0.018 &  0.000 &  0.192 &  0.000 &  0.072 &    0.0 \\
 $C_r$                  & -0.701 &  0.000 & -0.959 &  0.000 &  0.348 &  0.000 & -0.383 &    0.0 \\
-$C_r$ / $C_\{max\}$    &  2.587 &  0.000 &  2.389 &  0.000 &  1.679 &  0.000 &  1.348 &    0.0 \\
-$C_r$ / $C_\{mean\}$   & -1.488 &  0.000 & -0.492 &  0.000 & -1.380 &  0.000 & -0.070 &    0.0 \\
-$C_r$ / $C_\{median\}$ & -0.189 &  0.000 &  0.026 &  0.000 &  0.455 &  0.000 & -0.010 &    0.0 \\
-$C_r$ / $C_\{min\}$    &  0.086 &  0.000 & -0.268 &  0.000 &  0.108 &  0.000 & -0.202 &    0.0 \\
-$C_\{max\}$            &  1.961 &  0.000 &  1.544 &  0.000 &  1.411 &  0.000 &  0.780 &    0.0 \\
-$C_\{mean\}$           & -2.538 &  0.000 & -2.369 &  0.000 & -2.578 &  0.000 & -1.192 &    0.0 \\
-$C_\{median\}$         &  0.511 &  0.000 & -0.079 &  0.000 &  0.470 &  0.000 & -0.212 &    0.0 \\
-$C_\{min\}$            & -0.079 &  0.000 & -0.366 &  0.000 & -0.133 &  0.000 & -0.218 &    0.0 \\
+$C_r$ / $C_{max}$    &  2.587 &  0.000 &  2.389 &  0.000 &  1.679 &  0.000 &  1.348 &    0.0 \\
+$C_r$ / $C_{mean}$   & -1.488 &  0.000 & -0.492 &  0.000 & -1.380 &  0.000 & -0.070 &    0.0 \\
+$C_r$ / $C_{median}$ & -0.189 &  0.000 &  0.026 &  0.000 &  0.455 &  0.000 & -0.010 &    0.0 \\
+$C_r$ / $C_{min}$    &  0.086 &  0.000 & -0.268 &  0.000 &  0.108 &  0.000 & -0.202 &    0.0 \\
+$C_{max}$            &  1.961 &  0.000 &  1.544 &  0.000 &  1.411 &  0.000 &  0.780 &    0.0 \\
+$C_{mean}$           & -2.538 &  0.000 & -2.369 &  0.000 & -2.578 &  0.000 & -1.192 &    0.0 \\
+$C_{median}$         &  0.511 &  0.000 & -0.079 &  0.000 &  0.470 &  0.000 & -0.212 &    0.0 \\
+$C_{min}$            & -0.079 &  0.000 & -0.366 &  0.000 & -0.133 &  0.000 & -0.218 &    0.0 \\
 $DC$ to $C$ rate       &  0.203 &  0.000 &  0.137 &  0.000 & -0.020 &  0.000 &  0.084 &    0.0 \\
 $DD$ to $C$ rate       &  0.092 &  0.000 &  0.293 &  0.000 &  0.088 &  0.000 &  0.248 &    0.0 \\
 $N$                    & -0.000 &  0.000 & -0.000 &  0.000 & -0.000 &  0.713 & -0.000 &    0.0 \\
